# pollr

./: CHANGELOG.md  default.nix  nixpkgs.json  pollr.cabal  pollr.nix  shell.nix
app/: Main.hs
