cabal-version:      3.0
name:               pollr
version:            0.1.0.0
-- synopsis:
-- description:
-- license-file:       LICENSE
author:             Philg112
maintainer:         none
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable pollr
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , servant
                    , servant-server
                    , aeson
                    , warp
                    , text
                    , mtl
                    , containers
                    , time
    hs-source-dirs:   app
    default-language: Haskell2010
